staging/ingress.internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: superset-internal
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3601
    alb.ingress.kubernetes.io/load-balancer-name: superset-internal
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/success-codes: 200-404
    alb.ingress.kubernetes.io/target-type: ip
    ingress.kubernetes.io/rewrite-target: /
    meta.helm.sh/release-name: superset-deployment
    meta.helm.sh/release-namespace: superset
  name: superset-deployment-ingress
  namespace: superset
spec:
  ingressClassName: alb
  rules:
    - host: userguiding.superset.staging
      http:
        paths:
          - backend:
              service:
                name: superset
                port:
                  name: http
            path: /
            pathType: Prefix
